# vegas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  architectural_plan.md  install_dev.sh  pyproject.toml  pytest.ini  run_example.sh  setup.py  test_plan.md
.github/workflows/: tests.yml
demo_db/: vegas.duckdb
dev/: dev.ipynb
docs/: benchmark_guide.md  database_implementation.md  database_system.md  event_driven_backtesting.md  getting_started.md  market_hours.md  migration_to_polars.md  ohlcv_ingestion.md  performance_optimization.md  pipeline_system.md  timezone_handling.md  timezone_implementation.md
examples/: README.md  direct_ingest_ohlcv.py  duckdb_analysis_example.py  event_driven_example.py  hyperopt_example.py  pipeline_example.py  signal_research_example.py  simple_ma_strategy.py  strategy_with_report.py  test_db_rth_filtering.py  test_timezone_db_conversion.py  weekly_spy_trader.py
examples/scripts/: database_example.sh  ingest_ohlcv_example.sh  run_cli_example.sh  run_weekly_spy_trader.sh  use_ingested_data_example.sh
pipelines/: my_pipeline.py
strategies/: vegas-wave.py
test_db/: vegas.duckdb
tests/: IMPLEMENTATION_NOTES.md  README.md  __init__.py  benchmark.py  conftest.py  run_all_tests.py  test_bias_prevention.py  test_broker.py  test_broker_adapter_simulated_integration.py  test_cli.py  test_context_mode.py  test_data_layer.py  test_data_portal.py  test_database.py  test_database_duplicates.py  test_database_extended.py  test_engine.py  test_event_driven.py  test_ibkr_adapter.py  test_integration.py  test_long_only_strategy.py  test_marketdata_feed_adapter.py  test_performance.py  test_pipeline.py  test_portfolio.py  test_portfolio_and_broker.py  test_robustness.py  test_signal_research.py  test_strategy.py
tests/db/: vegas.duckdb
tests/db/partitioned/year=2022/month=1/: ba889b59fa344eb5a6610a8b241f2763-0.parquet
tests/db/partitioned/year=2022/month=1/symbol=AAPL/: 402b823eed3e4e1e80f5c2428611c177-0.parquet
tests/db/partitioned/year=2022/month=1/symbol=GOOG/: 402b823eed3e4e1e80f5c2428611c177-0.parquet
tests/db/partitioned/year=2022/month=1/symbol=MSFT/: 402b823eed3e4e1e80f5c2428611c177-0.parquet
tests/tests/: __init__.py  test_pipeline.py
vegas/: README.md  __init__.py  main.py
vegas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vegas/analytics/: README.md  __init__.py  analytics.py  hyperopt.py  results_helper.py
vegas/analytics/alpha/: __init__.py  alpha.py
vegas/broker/: __init__.py  adapters.py  broker.py  commission.py  ibkr_adapter.py  slippage.py
vegas/calendars/: __init__.py  base.py  nyse.py
vegas/cli/: README.md  __init__.py  main.py
vegas/data/: __init__.py  data_layer.py
vegas/database/: __init__.py  database.py
vegas/db/: vegas.duckdb
vegas/engine/: __init__.py  engine.py  event_engine.pyx  event_engine_py.py
vegas/marketdata/: feed.py  ibkr_feed.py
vegas/pipeline/: __init__.py  engine.py  pipeline.py  terms.py
vegas/pipeline/factors/: __init__.py  basic.py  custom.py  statistical.py
vegas/pipeline/filters/: __init__.py  advanced.py  basic.py
vegas/portfolio/: __init__.py  portfolio.py
vegas/strategy/: __init__.py  strategy.py
vegas/tests/: benchmark.py  test_analytics_report.py  test_strategy.py
vegas/utils/: __init__.py  data_generator.py  logging.py
