[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "vegas"
version = "0.1.0"
description = "Minimal Vectorized Backtesting Engine"
authors = ["David Styers <david.styers@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">=1.3.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
zstandard = ">=0.15.0"
quantstats = ">=0.0.59"
duckdb = ">=0.9.0"
pyarrow = ">=14.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"

[tool.poetry.scripts]
vegas = "vegas.main:main"

