[build-system]
requires = ["setuptools>=42", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "vegas"
version = "0.1.0"
description = "Minimal Vectorized Backtesting Engine"
authors = ["David Styers <david.styers@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
polars = ">=0.20.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
zstandard = ">=0.15.0"
quantstats = ">=0.0.59"  # Kept for compatibility but will use polars internally
duckdb = ">=0.9.0"
pyarrow = ">=14.0.0"
cython = ">=3.0.0"
pytz = ">=2023.3.0"
tabulate = "^0.9.0"

[tool.poetry.extras]
ibkr = ["ibapi"]

[tool.poetry.group.dev.dependencies]
psutil = "^7.0.0"
pytest = "^8.4.1"
jupyter = "^1.1.1"
mplfinance = "^0.12.10b0"

[tool.poetry.scripts]
vegas = "vegas.main:main"

