[build-system]
requires = ["setuptools>=42", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "vegas"
version = "0.1.0"
description = "Minimal Vectorized Backtesting Engine"
authors = ["David Styers <david.styers@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
polars = ">=0.20.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
zstandard = ">=0.15.0"
quantstats = ">=0.0.59"  # Kept for compatibility but will use polars internally
duckdb = ">=0.9.0"
pyarrow = ">=14.0.0"
cython = ">=3.0.0"
pytz = ">=2023.3.0"
tabulate = "^0.9.0"

[tool.poetry.extras]
ibkr = ["ibapi"]

[tool.poetry.group.dev.dependencies]
psutil = "^7.0.0"
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
jupyter = "^1.1.1"
mplfinance = "^0.12.10b0"
pre-commit = "^4.3.0"
ruff = "^0.12.8"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[tool.poetry.scripts]
vegas = "vegas.main:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
# Relax global strictness; we'll lint types incrementally where it matters.
check_untyped_defs = false
disallow_untyped_defs = false
strict = false
# Don't try to type-check examples/tests/pipelines right now
exclude = [
  "^examples/",
  "^tests/",
  "^pipelines/",
]

[[tool.mypy.overrides]]
module = [
  "vegas.analytics.*",
  "vegas.broker.*",
  "vegas.cli.*",
  "vegas.data.*",
  "vegas.database.*",
  "vegas.engine.*",
  "vegas.marketdata.*",
  "vegas.portfolio.*",
  "vegas.utils.*",
  "vegas.pipeline.engine",
  "vegas.pipeline.factors.*",
]
ignore_errors = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "C",  # mccabe complexity
  "N",  # naming conventions
  "B",  # bugbear
  "Q",  # flake8-quotes
]
ignore = [
  "D",   # disable all pydocstyle checks
  "E501",  # line length handled by black; allow long comments/docstrings
  "D203", "D211",  # blank line before class (conflicting rules)
  "D212", "D213",  # multi-line summary first/second line
  "D400", "D401", "D415",  # docstring punctuation / imperative mood
  "D105", "D107",  # missing docstring in magic/__init__
]
ignore-init-module-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.flake8]
max-line-length = 88
ignore = "E501"
